<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="About"
        app:titleTextColor="?attr/textColor" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarAbout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_round_border"
                android:padding="10dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon"
                    app:riv_corner_radius_bottom_left="10dp"
                    app:riv_corner_radius_top_left="10dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/logo"
                    android:layout_alignBottom="@+id/logo"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_toEndOf="@+id/logo"
                    android:background="?attr/colorBorder" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/logo"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="?attr/textTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_round_border"
                android:orientation="vertical"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_business"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/school"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/app_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_people"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/student1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/student1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/mssv1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_people"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/student2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/student2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/mssv2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_people"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/student3"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/student3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/mssv3"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_round_border"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:id="@+id/lnRateApp"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_star_rate"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/rateApp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/love_this_app"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_nfo"
                        app:tint="?attr/icon_note"
                        tools:ignore="ObsoleteLayoutParam" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/versionApp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textTitle"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:id="@+id/tvVersion"
                            android:layout_weight="1"
                            android:text="@string/version"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/textColor"
                            android:textSize="15dp"
                            tools:ignore="HardcodedText,SpUsage" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>