<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Activity.Setting"
    android:orientation="vertical">
    <!-- Star layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarsettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="?attr/textColor"
            app:title="Settings"/>

        <!--             Theme               -->

        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="?attr/backgroundColor"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlSymmetry">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:backgroundTint="#332979FF"
                android:background="@drawable/abs_history_playlist"
                android:src="@drawable/ic_brightness_4_black_24dp"
                app:tint="#2979FF"
                tools:ignore="ObsoleteLayoutParam" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1">
                <TextView
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Theme App"
                    android:textSize="17sp"
                    android:textColor="?attr/textColor"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/dark_or_light_mode"
                    android:textColor="?attr/textColor" />
            </LinearLayout>
            <Switch
                android:id="@+id/switch_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/textColor"/>

        <!--             Reminder               -->
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/lnNotifications"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:background="?attr/backgroundColor"
            tools:ignore="RtlSymmetry">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:backgroundTint="#33F50057"
                android:background="@drawable/abs_history_playlist"
                android:src="@drawable/ic_circle_notifications"
                app:tint="#F50057"
                tools:ignore="ObsoleteLayoutParam" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1">
                <TextView
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/notifications"
                    android:textSize="17sp"
                    android:textColor="?attr/textColor"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:textAlignment="viewStart"
                    android:id="@+id/tvNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/schedule"
                    android:textColor="?attr/textColor" />
            </LinearLayout>
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/textColor"/>

        <!--             Share               -->
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/lnShare"
            android:background="?attr/backgroundColor"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:backgroundTint="#33EFEB07"
                android:background="@drawable/abs_history_playlist"
                android:src="@drawable/ic_share"
                app:tint="#E3CF24"
                tools:ignore="ObsoleteLayoutParam" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1">

                <TextView
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textSize="17sp"
                    android:textColor="?attr/textColor"
                    tools:ignore="NestedWeights" />

            </LinearLayout>
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/textColor"/>

        <!--             Lock               -->
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/lnPassCode"
            android:background="?attr/backgroundColor"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:backgroundTint="#D0EFAC"
                android:background="@drawable/abs_history_playlist"
                android:src="@drawable/ic_lock"
                app:tint="#07750C"
                tools:ignore="ObsoleteLayoutParam" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1">

                <TextView
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/passCode"
                    android:textSize="17sp"
                    android:textColor="?attr/textColor"
                    tools:ignore="NestedWeights" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>